--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -18,3 +18,4 @@
   wight_reclaimed:0 "Wight Reclaimed"
   great_success:0 "Great Success"
   anglo_dutch_culture:0 "Nedersakisch resistance"
+  pro_heretics:0 "Tolerated Heretics"
