--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -19,3 +19,4 @@
   great_success:0 "Great Success"
   anglo_dutch_culture:0 "Nedersakisch resistance"
   pro_heretics:0 "Tolerated Heretics"
+  marching_eagles:0 "March of the Eagles"
