--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -1,12 +1,11 @@
 ﻿l_english: 
   united_in_cloth:0 "United in Cloth"
-  calculating_captain:0 "Calculating Captain"
   counting_count:0 "Counting Count"
   snk_reject_nahuatl:0 "Rejected Nahuatl"
   snk_tolerate_nahuatl:0 "Tolerated Nahuatl"
   snk_ireland_conversion:0 "The Conversion of Ireland"
   cunning_plan:0 "A Cunning Plan"
-  cunning_plan:0 "A Cunning Plan?"
+  cunning_plan_2:0 "A Cunning Plan?"
   beckshwire_reclaimed:0 "Berwickshire Reclaimed"
   victorious_suffragettes:0 "Victorious Suffragettes"
   unfaithful_government:0 "Unfaithful Government"
@@ -14,9 +13,9 @@
   glass_crisis:0 "Glass Mania Fallout"
   scales_of_justice:0 "Victorian-Snekist resurgence"
   london_reclimed:0 "London Reclaimed
-  ireland_converted:0 "The Conversion of Ireland"
+  snk_ireland_conversion:0 "The Conversion of Ireland"
   wight_reclaimed:0 "Wight Reclaimed"
   great_success:0 "Great Success"
   anglo_dutch_culture:0 "Nedersakisch resistance"
   pro_heretics:0 "Tolerated Heretics"
-  marching_eagles:0 "March of the Eagles"
+  london_reclaimed:0 "London Reclaimed"
