--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- snek:0 "Victorian-Snekist"
+ snek:0 "Victorius Snekist"
  alfr:0 "Álfr"
  alfr_desc:0 "Álfr, one of the three Victorians, is a saint of diplomacy and compromise, worshipped by those who hope for a peaceful future of our nation."
  cuthberht:0 "Cuthberht"
@@ -21,4 +21,4 @@
  snek_rebels_demand:0 "Convert $COUNTRYNAME$"
  snek_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  PURE_SNEK:0 "Snek Purists"
- snek_religion_desc:1 "The Church of the Victorious Snek covers a wide range of faiths dating back before the neolithic revolution, with the common features being the deification of Snakes and the belief that one day that the messenger Victoria will return to redeem humanity. By the start of the game the religion of Victorian-Snekism is primarily practiced around the East-Midlands of England, However the religion exists as a minority faith across the world, with communities continuing their worship from before the arrival of settled civilisation."
+ snek_religion_desc:1 "The Church of the Victorious Snek covers a wide range of faiths dating back before the neolithic revolution, with the common features being the deification of Snakes and the belief that one day that the messenger Victoria will return to redeem humanity. By the start of the game the religion of Victorious Snekism is primarily practiced around the East-Midlands of England, However the religion exists as a minority faith across the world, with communities continuing their worship from before the arrival of settled civilisation."
