Removed more stuff that would make PDX pissed

--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -11,7 +11,7 @@
   unfaithful_government:0 "Unfaithful Government"
   bureaucratic_defense:0 "Defense through Bureaucracy"
   glass_crisis:0 "Glass Mania Fallout"
-  scales_of_justice:0 "Victorian-Snekist resurgence"
+  scales_of_justice:0 "Snekist Resurgence"
   london_reclimed:0 "London Reclaimed
   snk_ireland_conversion:0 "The Conversion of Ireland"
   wight_reclaimed:0 "Wight Reclaimed"
