--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -104,7 +104,7 @@
  HUN:0 "Hungary"
  HUR:0 "Huron"
  INC:0 "Inca"
- IRE:0 "Ireland"
+ IRE:0 "Greater Munster"
  IRO:0 "Iroquois"
  ITA:0 "Italy"
  JAP:0 "Japan"
@@ -213,7 +213,7 @@
  SAR:0 "Sardinia"
  SAV:0 "Savoy"
  SAX:0 "Saxony"
- SCO:0 "Scotland"
+ SCO:0 "Alba"
  SER:0 "Serbia"
  SHA:0 "Shawnee"
  SHL:0 "Holstein"
