--- a/localisation/snekism_l_english.yml
+++ b/localisation/snekism_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- snek:0 "Victorius Snekist"
+ snek:0 "Victorian Snekist"
  alfr:0 "Álfr"
  alfr_desc:0 "Álfr, one of the three Great Heroes, is a saint of diplomacy and compromise, worshipped by those who hope for a peaceful future of our nation."
  cuthberht:0 "Cuthberht"
@@ -7,11 +7,11 @@
  urfkell:0 "Úrfkell"
  urfkell_desc:0 "Úlfkell, one of the three Great Heroes, is a one eyed saint of war, warriors pray to him for prowess in the battlefield"
  addaway:0 "Addaway"
- addaway_desc:0 "Saint of pragmatism and lawfulness, people of Victorius Snekism pray to Addaway in hopes of a consistent and stable future."
+ addaway_desc:0 "Saint of pragmatism and lawfulness, people of Victorian Snekism pray to Addaway in hopes of a consistent and stable future."
  cyrus:0 "Cyrus"
  cyrus_desc:0 "Saint of Progress and Technology, Lord Cyrus, Protector of Towns and Devourer of Meal-worms, is celebrated for his ingenuity, some even believe he heard whispers from the divine, inspiring the development of our world."
  paradoxus:0 "Paradoxus"
- paradoxus_desc:0 "They call him Doxus "the Great Uniter", known for unifying the people of Victorius Snekism under a single banner, many believe that he is the key to proselytizing natives of new worlds."
+ paradoxus_desc:0 "They call him Doxus "the Great Uniter", known for unifying the people of Victorian Snekism under a single banner, many believe that he is the key to proselytizing natives of new worlds."
  wikkel:0 "Wikkel"
  wikkel_desc:0 "Brother Wikkel was responsible for leading the ancient Sneklings into the loving arms of the almighty Snek. His meetings with Doxus formed the backbone of our religion."
  snek_rebels_title:0 "Religious"
@@ -21,4 +21,4 @@
  snek_rebels_demand:0 "Convert $COUNTRYNAME$"
  snek_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  PURE_SNEK:0 "Snek Purists"
- snek_religion_desc:1 "The Church of the Victorious Snek covers a wide range of faiths dating back before the neolithic revolution, with the common features being the deification of Snakes and the belief that one day that their messenger will return to redeem humanity. By the start of the game the religion of Victorious Snekism is primarily practiced around the East-Midlands of England, However the religion exists as a minority faith across the world, with communities continuing their worship from before the arrival of settled civilization."
+ snek_religion_desc:1 "The Church of the Victoria Snek covers a wide range of faiths dating back before the neolithic revolution, with the common features being the deification of Snakes and the belief that one day that their messenger will return to redeem humanity. By the start of the game the religion of Victorious Snekism is primarily practiced around the East-Midlands of England, However the religion exists as a minority faith across the world, with communities continuing their worship from before the arrival of settled civilization."
