Added Localisation for Essex

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -62,7 +62,7 @@
  COR:0 "Corsica"
  CRE:0 "Creek"
  CRI:0 "Crimea"
- CRN:0 "Cornwall"
+ CRN:0 "Cornwallum"
  CRO:0 "Croatia"
  CRT:0 "Crete"
  CYP:0 "Cyprus"
@@ -1407,3 +1407,5 @@
  EMR_ADJ:0"East Mercian"
  WSX:0"Wessex"
  WSX_ADJ:0"Wessexian"
+ ESX:0"Essex"
+ ESX_ADJ:0"Essexian"
