Changed Wales' localisation

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -260,7 +260,7 @@
  VEN:0 "Venice"
  VIE:0 "Vientiane"
  VIJ:0 "Vijayanagar"
- WLS:0 "Wales"
+ WLS:0 "Gwynedd"
  WUR:0 "Wurttemberg"
  YAR:0 "Yaroslavl"
  YOR:0 "Andhra"
