--- a/localisation/missions_I_english.yml
+++ b/localisation/missions_I_english.yml
@@ -1,3 +1,3 @@
 l_english:
   DMA_rally_troops_title:0 "Rally the troops"
-  DMA_rally_troops_desc:0 "We must rally all of our troops together, to free ourselves from the Scottish yoke"
+  DMA_rally_troops_desc:0 "We must rally together all the levees and professional troops to assemble an army large enough to free ourselves from the Scottish yoke"
