--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -12,7 +12,7 @@
   bureaucratic_defense:0 "Defense through Bureaucracy"
   glass_crisis:0 "Glass Mania Fallout"
   scales_of_justice:0 "Snekist Resurgence"
-  london_reclimed:0 "London Reclaimed
+  london_reclimed:0 "London Reclaimed"
   snk_ireland_conversion:0 "The Conversion of Ireland"
   wight_reclaimed:0 "Wight Reclaimed"
   great_success:0 "Great Success"
