added localisation for DM mission tree and Mercia decision

--- a/localisation/snekdecisions_l_english.yml
+++ b/localisation/snekdecisions_l_english.yml
@@ -1,3 +1,5 @@
 l_english:
  snk_credits_title:0 "Credits for the mod"
  snk_credits_desc:0 "Credits of the people who made this mod praising Snek"
+ forming_mercia_title:0 "Form Mercia"
+ forming_mercia_desc:0 "We have unified the lands owned by the Kingdom of Mercia, now we can finally claim to be the Kingdom of Mercia"
