--- a/localisation/snekmodifiers_l_english.yml
+++ b/localisation/snekmodifiers_l_english.yml
@@ -19,3 +19,5 @@
   anglo_dutch_culture:0 "Nedersakisch resistance"
   pro_heretics:0 "Tolerated Heretics"
   london_reclaimed:0 "London Reclaimed"
+  trent_estuary_modifier:0 "Trent estuary"
+  desc_trent_estuary_modifier:0 "The river Trent and the river Ouse meet the sea at Hull, allowing goods from the Midlands and Yorkshire to be easily transported to the port of Hull"
