--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1405,8 +1405,8 @@
  WEM_ADJ:0"West Mercian"
  EMR:0"East Mercia"
  EMR_ADJ:0"East Mercian"
- WSX:0"Wessex"
- WSX_ADJ:0"Wessexian"
+ WSX:0"Anglecynn"
+ WSX_ADJ:0"Anglo-Saxon"
  ESX:0"Essex"
  ESX_ADJ:0"Essexian"
  EAN:0"East Anglia"
