added and tweaked DMs missions

--- a/localisation/missions_l_english.yml
+++ b/localisation/missions_l_english.yml
@@ -360,8 +360,11 @@
  persian_afghanistan_desc:0 "The mountainous lands of the Afghans guard the way into the rich plains of India. By expanding into this region we can both protect ourselves from the raids of the unruly Afghans and open future routes of expansion to the east."
  have_vaisyas_in_5_provinces:1 "Grant 5 §YCenters of Trade§!, of at least level 2, to the §YVaishyas§!, §YBurghers§!, or §YJains§!."
  DMA_rally_troops_title:0 "Rally the troops" 
- DMA_rally_troops_desc:0 "We must rally together all the levees and professional troops to assemble an army large enough to free ourselves from the Scottish yoke" 
+ DMA_rally_troops_desc:0 "We must rally together all the levees and professional troops to assemble an army large enough to free ourselves from the Scottish yoke." 
  DMA_end_regency_title:0 "End the Regency" 
- DMA_end_regency_desc:0 "In order to attain independence from the Scots, we must find a suitable ruler to lead us" 
+ DMA_end_regency_desc:0 "In order to attain independence from the Scots, we must find a suitable ruler to lead us." 
  restore_government:0 "Order in the government" 
- desc_restore_government:0 "We have restored order and legitmacy of the government" 
+ desc_restore_government:0 "We have restored order and legitmacy of the government."
+ DMA_renovate_fleet_title:0 "Naval Improvements"
+ DMA_renovate_fleet_desc:0 "If we are going to attain independence, we must invest in our navy, so we can achieve naval superiority over Alba."
+ fleet_improvements:0 "Naval investment"
